# wayland-playground

./: README.md
cairo/: meson.build
cairo/src/: global.h  main.c  renderer.c  renderer.h  shm.c  wayland.c  wayland.h
hello-wayland/: meson.build
hello-wayland/src/: main.c
layer-shell/: .editorconfig  meson.build
layer-shell/src/: global.h  listeners.h  main.c
